--- a/src/App.css
+++ b/src/App.css
@@ -331,20 +331,17 @@
 }
 .h3:hover {
   color: #6f4f28;
-  /* margin-left: 1.9vw; */
 }
+
 .h3-arrow {
+  position: absolute;
   transform: rotate(180deg);
-  color: #201b13;
+  color: #6f4f28;
   cursor: pointer;
   font-size: 1.79vw;
   display: none;
 }
-.room-box {
-  height: 6vh;
-  display: flex;
-  align-items: center;
-}
+
 .rooms-img {
   position: absolute;
   width: 61.5vw;
